@@ -1,4 +1,9 @@
-2011-12-06 Jens Thoms Toerring    <jt@toerring.de>
+2011-11-17 Jens Thoms Toerring    <jt@toerring.de>
+
+	* lib/button.c: But pointed out by Michal Szymanski
+	on resetting radio buttons fixed.
+
+2011-11-06 Jens Thoms Toerring    <jt@toerring.de>
 
 	* lib/flresource.c: Previous change that made double
 	buffering the default for forms reverted.
